[gd_scene load_steps=2 format=3 uid="uid://bsckecu25liqr"]

[ext_resource type="Script" path="res://addons/roguelike_system/scripts/LevelsManager.gd" id="1_fx200"]

[node name="LevelsManager" type="MarginContainer"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_right = 68.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fx200")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="CreateNewLevelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create new level"

[node name="RenameLevelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Rename current level
"

[node name="CurrentLevelHolder" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CurrentLevelLabel" type="Label" parent="VBoxContainer/CurrentLevelHolder"]
layout_mode = 2
text = "Current Level:"

[node name="CurrentLevelButton" type="OptionButton" parent="VBoxContainer/CurrentLevelHolder"]
layout_mode = 2

[node name="StarterRoomHolder" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CurrentLevelLabel" type="Label" parent="VBoxContainer/StarterRoomHolder"]
layout_mode = 2
text = "Starter room:"

[node name="StarterRoomButton" type="OptionButton" parent="VBoxContainer/StarterRoomHolder"]
layout_mode = 2

[node name="VSplitContainer" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ExportLevelsHolder" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Export levels"

[node name="ExportReport" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Export status:
"
fit_content = true
